--- a/자기소개서 2019-05-24.md
+++ b/자기소개서 2019-05-24.md
@@ -1,1 +1,66 @@
-
+# 이 력 서
+<h3> 성명 한 기정
+<h3> 한자 
+  ## 생년월일 
+  <h3>2000.01.16
+    <h3>복무기간 육군 <h3> 보직 통신병
+      
+      *******
+      
+     ## 기간          학력사항          
+      ### 2007~2012      초등학교 졸업
+      ### 2012~2015      중학교   졸업
+      ### 2016~2018      고등학교 졸업
+      ### 2019~2023      대학교   석사          
+      
+      
+      ##기간         경력 및 자격 사항 등
+      ### 정보처리기능사
+      ### ITQ
+      ### 정보처리기사
+      
+      
+      # 위 사실과 틀림없을을 확인합니다.
+      
+      # 2025 # 년   # 05 # 월  # 21 # 일
+      
+      
+      
+      
+      
+      
+    # 자기 소개서
+    
+    ## 성장배경
+    
+    초등학교때부터 컴퓨터에 관심이 많던 저는 중학교에 들어가, 자신의 꿈의대한 성찰을 시작하였습니다.
+    어릴적부터 컴퓨터에 관심이 많아 중학교때에는 컴퓨터를 분해하여 컴퓨터의 원리를 알아보기 시작하였고,
+    이윽고 인터넷에서 운용하는 프로그램에도 자연스럽게 관심이 가기 시작하였습니다.
+    고등학교에 들어가 점차 컴퓨터의 세부적인 부분까지도 관심이 가기 시작하여 동양미래대학교에 진학하였고,
+    군대를 갔다온후 석사과정을 밟으며 관련 자격증을 취득하였습니다.
+    대학을 졸업한 이후 꿈은 더욱 확고해졌고 더욱 꿈을 선명하게 만들기위해 노력중입니다.
+    
+    
+    # 성격을 장/단점
+    
+    어릴적부터 굉장히 밝은편이었기때문에 주변사람들에게 재미있다, 혹은 같이있으면 즐겁다라는 말을 들었습니다.
+    하지만 누구나 저를 좋아 할 수 없다는 것을 알기때문에 저를 싫어하는 사람이 있으면 그사람을 제 편으로 돌리기보단,
+    그사람을 포기하는 성향이 강합니다.
+    
+    # 전공 및 경력사항
+    
+    경기세무고등학교 세무행정과          졸업
+    동양미래대학교   컴퓨터 소프트웨어과 석사
+    정보처리기사     취득
+    
+    # 1. 우리 학과에 지원하게 된 동기는?
+    
+    고등학교에서 미래의 진로에 대해 많은 고민이 있었습니다만, 가장 좋은것은 
+    자주, 오래 썻던 컴퓨터쪽으로 가는 것이 어떠냐는 부모님의 조언으로 오게 되었습니다.
+    코딩하는 것이 생각보다 어려웠지만 즐겁고 교수님께서 설명을 잘 해주시기 때문에 어려움은 없습니다.
+    
+    # 2. 앞으로 어떤 분야에서 일을 하고 싶은가?
+    
+    중소 기업쪽으로 들어가, 게임제작기반으로 두고 싶습니다.
+    게임이라면 굉장히 다양한 종류로 즐겼고, 또한 즐겁게 만들 수 있을 것 같습니다.
+    
