--- a/자기소개서 2019-05-24.md
+++ b/자기소개서 2019-05-24.md
@@ -41,7 +41,7 @@
     대학을 졸업한 이후 꿈은 더욱 확고해졌고 더욱 꿈을 선명하게 만들기위해 노력중입니다.
     
     
-    # 성격을 장/단점
+    # 성격의 장/단점
     
     어릴적부터 굉장히 밝은편이었기때문에 주변사람들에게 재미있다, 혹은 같이있으면 즐겁다라는 말을 들었습니다.
     하지만 누구나 저를 좋아 할 수 없다는 것을 알기때문에 저를 싫어하는 사람이 있으면 그사람을 제 편으로 돌리기보단,
