--- a/자기소개서 2019-05-24.md
+++ b/자기소개서 2019-05-24.md
@@ -2,8 +2,9 @@
 <h3> 성명 한 기정
 <h3> 한자 
   ## 생년월일 
-  <h3>2000.01.16
-    <h3>복무기간 육군 <h3> 보직 통신병
+  2000.01.16
+  복무기간 : 2020~2022
+  보직     : 육군
       
       *******
       
