--- a/자기소개서 2019-05-24.md
+++ b/자기소개서 2019-05-24.md
@@ -12,7 +12,7 @@
       ### 2007~2012      초등학교 졸업
       ### 2012~2015      중학교   졸업
       ### 2016~2018      고등학교 졸업
-      ### 2019~2023      대학교   석사          
+      ### 2019~2023      대학교            
       
       
       ##기간         경력 및 자격 사항 등
@@ -39,7 +39,7 @@
     이윽고 인터넷에서 운용하는 프로그램에도 자연스럽게 관심이 가기 시작하였습니다.
     고등학교에 들어가 점차 컴퓨터의 세부적인 부분까지도 관심이 가기 시작하여 동양미래대학교에 진학하였고,
     군대를 갔다온후 석사과정을 밟으며 관련 자격증을 취득하였습니다.
-    대학을 졸업한 이후 꿈은 더욱 확고해졌고 더욱 꿈을 선명하게 만들기위해 노력중입니다.
+    대학을 입학한 이후 꿈은 더욱 확고해졌고 더욱 꿈을 선명하게 만들기위해 노력중입니다.
     
     
     # 성격의 장/단점
@@ -51,7 +51,7 @@
     # 전공 및 경력사항
     
     경기세무고등학교 세무행정과          졸업
-    동양미래대학교   컴퓨터 소프트웨어과 석사
+    동양미래대학교   컴퓨터 소프트웨어과
     정보처리기사     취득
     
     # 1. 우리 학과에 지원하게 된 동기는?
